# FIAP_Fase4

./: .gitignore  README.md  pyproject.toml
reports/: report.json
src/: activity_detection_module.py  emotion_analysis_module.py  face_recognition_module.py  main.py  report_module.py  video_processing.py
