[tool.poetry]
name = "tech-challeng"
version = "0.1.0"
description = ""
authors = ["giuan-audi <francisco.ferreira@auditeste.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
absl-py = "2.1.0"
astunparse = "1.6.3"
attrs = "25.1.0"
beautifulsoup4 = "4.12.3"
blinker = "1.9.0"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
cmake = "3.31.4"
colorama = "0.4.6"
contourpy = "1.3.1"
cycler = "0.12.1"
decorator = "5.1.1"
deepface = "0.0.93"
dlib = "19.24.6"
face-recognition = "1.3.0"
face-recognition-models = "0.3.0"
filelock = "3.17.0"
fire = "0.7.0"
Flask = "3.1.0"
Flask-Cors = "5.0.0"
flatbuffers = "25.1.24"
fonttools = "4.55.8"
fsspec = "2025.2.0"
gast = "0.6.0"
gdown = "5.2.0"
gensim = "4.3.3"
google-pasta = "0.2.0"
grpcio = "1.70.0"
gunicorn = "23.0.0"
h5py = "3.12.1"
huggingface-hub = "0.28.1"
idna = "3.10"
imageio = "2.37.0"
imageio-ffmpeg = "0.6.0"
itsdangerous = "2.2.0"
jax = "0.5.0"
jaxlib = "0.5.0"
Jinja2 = "3.1.5"
joblib = "1.4.2"
keras = "3.8.0"
kiwisolver = "1.4.8"
libclang = "18.1.1"
lz4 = "4.4.3"
Markdown = "3.7"
markdown-it-py = "3.0.0" # Corrigido o nome da dependência
MarkupSafe = "3.0.2"
matplotlib = "3.10.0"
mdurl = "0.1.2"
mediapipe = "0.10.20"
ml-dtypes = "0.4.1" # Corrigido o nome da dependência
moviepy = "2.1.2"
mpmath = "1.3.0"
mtcnn = "1.0.0"
namex = "0.0.8"
networkx = "3.4.2"
numpy = "1.26.4"
opencv-contrib-python = "4.11.0.86" # Corrigido o nome da dependência
opencv-python = "4.11.0.86" # Corrigido o nome da dependência
opencv-python-headless = "4.11.0.86" # Corrigido o nome da dependência
opt_einsum = "3.4.0"
optree = "0.14.0"
packaging = "24.2"
pandas = "2.2.3"
pillow = ">=9.2.0,<11.0"
proglog = "0.1.10"
protobuf = "4.25.6"
pycparser = "2.22"
Pygments = "2.19.1"
pyparsing = "3.2.1"
PySocks = "1.7.1"
python-dateutil = "2.9.0.post0" # Corrigido o nome da dependência
python-dotenv = "1.0.1" # Corrigido o nome da dependência
pytz = "2025.1"
PyYAML = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
retina-face = "0.0.17" # Corrigido o nome da dependência
rich = "13.9.4"
safetensors = "0.5.2"
scipy = "1.13.1"
sentencepiece = "0.2.0"
six = "1.17.0"
smart-open = "7.1.0" # Corrigido o nome da dependência
sounddevice = "0.5.1"
soupsieve = "2.6"
sympy = "1.13.1"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2" # Corrigido o nome da dependência
tensorflow = "2.18.0"
tensorflow-io-gcs-filesystem = "0.31.0" # Corrigido o nome da dependência
tensorflow_intel = "2.18.0"
termcolor = "2.5.0"
tf_keras = "2.18.0"
tokenizers = "0.21.0"
torch = "2.6.0"
tqdm = "4.67.1"
transformers = "4.48.2"
typing-extensions = "4.12.2" # Corrigido o nome da dependência
tzdata = "2025.1"
urllib3 = "2.3.0"
Werkzeug = "3.1.3"
wrapt = "1.17.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
